# kafka-s3-sink

./: Cargo.toml  README.org  docker-compose.yml
src/: api.rs  command_processor.rs  commander.rs  commands.rs  commands_schema.rs  config.rs  consumer.rs  db.rs  events_schema.rs  inputs_schema.rs  main.rs  materialized_view.rs  producer.rs  queries.rs  schema.rs  utils.rs
