[package]
name = "with-kafka"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
log = "^0.4"
env_logger = "^0.8"
serde = "^1.0"
serde_json = "1.0"
rdkafka = "0.25.0"
avro-rs = "0.13.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }