[package]
name = "with-kafka"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
# futures = "0.3.5"
futures = { version = "0.3", features = ["compat"] }
log = "0.4"
rdkafka = "0.25"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# tokio-stream = { version =  "0.1", features = ["net"] }
uuid = { version = "0.8", features = ["v4"] }
maplit = "1.0.2"
avro-rs = { version = "0.13", features = ["snappy"] }
serde_derive = "1.0.123"
warp = "0.3"
